*
* 1.2.4
*

- New global variable $dci in transformation scripts
- Management console:
	- Command line options for automatic connect
- Storage discovery API


*
* 1.2.3
*

- Improved LLDP support
- New "Find IP address" function (find node's switch port by IP address)
- Set MAC address for "unknown" interfaces from ARP cache
- Detection of IP address change for nodes without agent and SNMP
- Agent on Windows is in UNICODE
- UNICODE build supported on Linux and FreeBSD
- ifXTable used when possible for interface traffic DCIs creation
- Server can be configured to use DNS host names instead of FQDN for newly
  discovered nodes
- Script hooks for configuration poll
- Management console:
	- Configurable date and time format
	- Background color can be set for network maps
	- Different connection routing algorithms for network maps
	- Fixed incorrect display of string data in DCI history
	- Added "copy to clipboard" action in MAC address search reults
	- Added "copy to clipboard" action in interface tab
	- Double click in MIB explorer walk results selects OID in tree
	- Fixed status indicator update problems in object browser
	- Fixed dashboard navigator refresh issues
	- Object tools execution on multiple objects
	- Implemented "Clear collected data" action for DCIs
	- Fixed missing scrollbar issue in VLAN view
- Added commands "get" and "set" to nxdbmgr to manager server configuration
  variables
- New NXSL function: RenameObject
- Web interface look is more consistent with desktop client
- Fixed critical bug in NXSL interpreter (incorrect execution of operation --)
- Android client:
	- Added: nodes and dashboards container status in home screen reflect 
          children status (icon changes on WARNING, MINOR, MAJOR, and CRITICAL). 
	- Added: interfaces tab under node info activity 
	- Added: handle alarm sticky acnowledge action and state.
	- Added: sort of alarm list in node info tab. 
	- Added: multiple selection for actions on alarms list.